discussion/kv_engine/177006/177006_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[serverless] Add Dcp throttling and metering test

Add unit tests to verify that Throttling and Metering works
over DCP

Change-Id: Iab9d25c980d7d115d2783ba485177cafda652381

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 06:16:28.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 07:44:16.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19623/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19623/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18517/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/dcp_drain.cc:187:9: error: use of undeclared identifier "EXPECT_TRUE" [clang-diagnostic-error]
        EXPECT_TRUE(rsp.isSuccess()) << rsp.getStatus();
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/main.cc:51:14: error: no member named "cerr" in namespace "std" [clang-diagnostic-error]
        std::cerr << "Failed to create the cluster" << std::endl;
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/main.cc:56:14: error: no member named "cerr" in namespace "std" [clang-diagnostic-error]
        std::cerr << "Cluster not running" << std::endl;
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/main.cc:137:14: error: no member named "cerr" in namespace "std" [clang-diagnostic-error]
        std::cerr << error.what();
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/main.cc:161:14: error: no member named "cerr" in namespace "std" [clang-diagnostic-error]
        std::cerr << "Failed to enable libevent locking. Terminating program"
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/main.cc:178:14: error: no member named "cerr" in namespace "std" [clang-diagnostic-error]
        std::cerr << "Fatal: failed to ignore SIGPIPE" << std::endl;
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/main.cc:182:7: error: no member named "testing" in the global namespace [clang-diagnostic-error]
    ::testing::InitGoogleTest(&argc, argv);
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/main.cc:185:22: error: use of undeclared identifier "RUN_ALL_TESTS" [clang-diagnostic-error]
    const auto ret = RUN_ALL_TESTS();
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11: error: unknown type name "size_t" [clang-diagnostic-error]
constexpr size_t MaxConnectionsPerBucket = 16;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:23:8: error: use of undeclared identifier "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18517/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/dcp_drain.cc:187:9:
error: use of undeclared identifier "EXPECT_TRUE" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18517/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8188/ : FAILURE

Compile error at [2022-07-03T06:31:59.998Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/dcp_drain.cc:187:9:
error: use of undeclared identifier "EXPECT_TRUE"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8188/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17669/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47282/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39729/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20401/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20749/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21389/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28782/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8287/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
